--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Eleve seu negócio digital a outro nível
         <strong class="titulo-destaque"> com um Front-end de qualidade!
         </strong></h1>  
-        <p class="apresentacao_conteudo_texto">Olá! Sou Luan Alves, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar? </p>
+        <p class="apresentacao_conteudo_texto">Olá! Sou Luan Alves, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar? </p>
        <div class="apresentacao_links">
         <h2 class="apresentacao_links_subtitulo"> Acesse minhas redes:</h2>
       
